test/sematest/invalid/test2.java
/* -*- coding:utf-8; mode:java; -*- */

class Test {

	public static void main(String[] args) { }

	public void f() {}
	public void f() {}

}
